# libsoundbag

./: CMakeLists.txt  LICENSE.txt  README.md
src/: SBGL_Dialog.cpp  SBGL_Object.cpp  SBGL_Text.cpp  SDL_GL_Window.cpp  soundbag.cpp  zlib_tool.cpp
src/include/: bits.hpp  soundbag.hpp
src/include/soundbag/: Bitmap.hpp  Color.hpp  Point.hpp  Rect.hpp  SBGL.hpp  SBGL_Dialog.hpp  SBGL_Object.hpp  SBGL_Text.hpp  SDL_GL_Window.hpp  bits.hpp  soundbag.hpp  threads.hpp  utils.hpp  zlib_tool.hpp
test/: CMakeLists.txt  SBGL_Test.cpp  SBGL_test.cpp  bits_test.cpp  soundbag_test.cpp  utils_test.cpp  zlib_test.cpp
